// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article summary component with a single paragraph 1`] = `
<style>
.S1 {
  margin-bottom: 0px;
}

.S2 {
  color: rgba(51,51,51,1.00);
  font-family: TimesModern-Bold;
  font-size: 22px;
  font-weight: 400;
  line-height: 27px;
  margin-bottom: 5px;
}

.S3 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 10px;
}

.S4 {
  color: rgba(105,105,105,1.00);
  font-family: GillSansMTStd-Medium;
  font-size: 13px;
  line-height: 15px;
  margin-bottom: 5px;
}
</style>

<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-view-1dbjc4n r-marginBottom-p1pxzi S1"
  >
    <ArticleLabel
      color="#333333"
      title="Test label"
    />
  </div>
  <h3
    aria-level="3"
    className="css-reset-4rbku5 css-text-901oao r-color-1khnkhu r-fontFamily-iirzy8 r-fontSize-evnaw r-fontWeight-16dba41 r-lineHeight-1kt6imw r-marginBottom-d0pm55 S2"
    role="heading"
  >
    Test Headline
  </h3>
  <div
    className="css-text-901oao r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe r-marginBottom-15d164r S3"
  >
    <span
      className="css-text-901oao css-textHasAncestor-16my406"
    >
      
      Test paragraph
      ...
    </span>
  </div>
  <ArticleFlags
    flags={
      Array [
        Object {
          "expiryTime": "2020-03-13T12:00:00.000Z",
          "type": "UPDATED",
        },
        Object {
          "expiryTime": "2019-03-14T12:00:00.000Z",
          "type": "EXCLUSIVE",
        },
      ]
    }
  />
  <div
    className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginBottom-d0pm55 S4"
    data-testid="datePublication"
  >
    <DatePublication
      date="2017-11-17T00:01:00.000Z"
      publication="TIMES"
    />
  </div>
  <div
    className="css-text-901oao"
  >
    <ArticleByline
      ast={
        Array [
          Object {
            "attributes": Object {
              "slug": "camilla-long",
            },
            "children": Array [
              Object {
                "attributes": Object {
                  "value": "Camilla Long",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "author",
          },
          Object {
            "attributes": Object {},
            "children": Array [
              Object {
                "attributes": Object {
                  "value": ", Environment Editor",
                },
                "children": Array [],
                "name": "text",
              },
            ],
            "name": "inline",
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`2. article summary content component with the given style 1`] = `
<style>
.S1 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 10px;
}
</style>

<div
  className="css-text-901oao r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe r-marginBottom-15d164r S1"
>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
  >
    
    Test
    ...
  </span>
</div>
`;

exports[`3. article summary content component with white space height and lineheight 1`] = `
<style>
.S1 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  margin-bottom: 10px;
}

.IS1 {
  -webkit-line-clamp: 4;
  line-height: 30px;
}
</style>

<div
  className="css-text-901oao css-textMultiLine-cens5h r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-marginBottom-15d164r IS1 S1"
>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
  >
    
    Test
    ...
  </span>
</div>
`;

exports[`4. article summary content component without white space height 1`] = `
<style>
.S1 {
  color: rgba(105,105,105,1.00);
  -ms-flex-wrap: wrap;
  -webkit-box-lines: multiple;
  -webkit-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: TimesDigitalW04;
  font-size: 14px;
  line-height: 20px;
  margin-bottom: 10px;
}

.IS1 {
  -webkit-line-clamp: 2;
}
</style>

<div
  className="css-text-901oao css-textMultiLine-cens5h r-color-1khp51w r-flexWrap-1w6e6rj r-fontFamily-1feecvn r-fontSize-1b43r93 r-lineHeight-rjixqe r-marginBottom-15d164r IS1 S1"
>
  <span
    className="css-text-901oao css-textHasAncestor-16my406"
  >
    
    Test
    ...
  </span>
</div>
`;
